Fiz layout bug with links in widgets

--- a/course/static/course/course.css
+++ b/course/static/course/course.css
@@ -284,6 +284,7 @@ strong {
 
 .card .card-action.markdown a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
     text-transform: none;
+    margin-right: 0;
 }
 
 .card-action.markdown ul {
